# moedularizer

./: .codegraphinclude  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  IMODENT_AUDIT_2026-05-25.md  LICENSE  README.md  moedularizer-shortcomings.md  pyproject.toml
.codegraph/: codegraph.db  codegraph.yaml  community_cache.json
.codegraph/cache/: graph_cache.pkl
.github/workflows/: ci.yml  publish.yml
moedularizer/: __init__.py  __main__.py  analyzer.py  cli.py  clusterer.py  config.py  dependency.py  generator.py  generator.py.bak  imodent_bridge.py  types.py  validator.py
src/moedularizer/: __init__.py  __main__.py  analyzer.py  cli.py  clusterer.py  config.py  dependency.py  generator.py  imodent_bridge.py  py.typed  types.py  validator.py
tests/integration/: test_file_io.py
tests/property/: test_invariants.py
tests/regression/: test_golden.py
tests/regression/golden/: class_with_methods.txt  clustering.txt  config_defaults.txt  dependencies.txt  dependency_graph.txt  full_pipeline.txt  init_generation.txt  module_generation.txt  simple_function.txt
tests/smoke/: test_cli_import.py  test_imports_exist.py  test_path_traversal.py
tests/unit/: test_edge_cases.py  test_error_handling.py
